# ChatService

./: .gitignore  chat.db  package-lock.json  package.json  test_api.py
client-vue/: README.md  index.html  package-lock.json  package.json
client-vue/src/: App.vue  idb.ts  main.ts  virtual-scroll-vue.d.ts
client-vue/src/ChatContainer/: ChatContainer.vue  ChatContainerOld.vue  ChatInterface.vue  MessageBubble.vue
client-vue/src/components/: ChatInterface.vue  MessageBubble.vue
client-vue/src/components/chat/: ChatContainer.vue  MessageBubble.vue  types.ts
client-vue/src/login/: FinnishRegister.vue  LoginPage copy.vue  LoginPage.vue
client-vue/src/login/components/: LoginForm.vue  RegisterForm.vue
client-vue/src/login/styles/: auth-common.css  auth-forms.css
client-vue/src/router/: index.ts
client-vue/src/types/: markdown-it-plugins.d.ts
client-vue/src/utils/: api.ts  authValidators.ts
client-vue/src/views/: Announcement.vue  Blog.vue  BlogShell.vue  MainLayout.vue
client-vue/src/views/blog/: BlogList.vue
client-vue/src/views/wall/: ConfessionBubble.vue  ConfessionWall.vue  WallPage.vue
server/: chat.db  check_db.py  logger.py  main.py  pyproject.toml
server/db/: create_db.py  database.py  models.py  test_data_generator_final.py
server/router/chat/: ChatMessage.proto  ChatMessage_pb2.py  __init__.py  messages.py
server/router/users/: login.py
