[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "fastapi-mail>=1.5.0",
    "grpcio-tools>=1.76.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "protobuf>=6.33.0",
    "pydantic>=2.11.7",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
